[gd_scene load_steps=8 format=2]

[ext_resource path="res://Icons64x64/Cloud_Info.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainPage.gd" type="Script" id=2]
[ext_resource path="res://Icons64x64/Process.png" type="Texture" id=3]
[ext_resource path="res://Icons64x64/Download.png" type="Texture" id=4]
[ext_resource path="res://Icons64x64/Server2.png" type="Texture" id=5]
[ext_resource path="res://AmericanCaptain.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="MainPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 1

[node name="TitleText" type="Label" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 410.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 7 )
text = "MAIN PAGE"
align = 1

[node name="Space6" type="ColorRect" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 410.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="NameButton" type="Button" parent="VBoxContainer"]
margin_top = 185.0
margin_right = 410.0
margin_bottom = 275.0
rect_min_size = Vector2( 400, 90 )
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
text = "TAB TO GENERATE NAME"
icon = ExtResource( 3 )
clip_text = true

[node name="Space5" type="ColorRect" parent="VBoxContainer"]
margin_top = 279.0
margin_right = 410.0
margin_bottom = 289.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 293.0
margin_right = 410.0
margin_bottom = 363.0
rect_min_size = Vector2( 400, 50 )
text = "SAVE NAME"
icon = ExtResource( 4 )

[node name="Space4" type="ColorRect" parent="VBoxContainer"]
margin_top = 367.0
margin_right = 410.0
margin_bottom = 377.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="SilibleEditorButton" type="Button" parent="VBoxContainer"]
margin_top = 381.0
margin_right = 410.0
margin_bottom = 451.0
rect_min_size = Vector2( 400, 50 )
text = "SYLIBLE EDITOR"
icon = ExtResource( 5 )

[node name="Space3" type="ColorRect" parent="VBoxContainer"]
margin_top = 455.0
margin_right = 410.0
margin_bottom = 465.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="NameListButton" type="Button" parent="VBoxContainer"]
margin_top = 469.0
margin_right = 410.0
margin_bottom = 539.0
rect_min_size = Vector2( 400, 50 )
text = "NAME LIST"
icon = ExtResource( 1 )

[node name="Space" type="ColorRect" parent="VBoxContainer"]
margin_top = 543.0
margin_right = 410.0
margin_bottom = 693.0
rect_min_size = Vector2( 0, 150 )
color = Color( 1, 1, 1, 0 )

[connection signal="button_down" from="VBoxContainer/NameButton" to="." method="_on_NameButton_button_down"]
[connection signal="button_down" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_button_down"]
[connection signal="button_down" from="VBoxContainer/SilibleEditorButton" to="." method="_on_SilibleEditorButton_button_down"]
[connection signal="button_down" from="VBoxContainer/NameListButton" to="." method="_on_NameListButton_button_down"]
